refactor(entities): improve string methods and change id type from UUID to integer